<package format="2">
  <name>ur-ros-driver-config</name>
  <version>1.0.0</version>

  <description>Contains files that are meant to override the default files provided by UR to suit application needs.</description>

  <author email="mehta.mayank860@gmail.com">Mayank N. Mehta</author>

  <maintainer email="mehta.mayank860@gmail.com">Mayank N. Mehta</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_calibration</exec_depend>
  
</package>
